# egui_glfw_mdi

./: Cargo.toml  README.md
glfw_sys/: Cargo.toml  generate.sh  lib.rs  wrapper.h
shaders/: ui.frag  ui.vert
src/: gl.rs  main.rs  main_loop.rs  profiler.rs  ui.rs  utils.rs  window.rs
