[package]
name = "egui_glfw_mdi"
version = "0.0.0"
edition = "2024"
license = "BSD-2-Clause-Patent"

[profile.relwithdbg]
inherits = "release"
strip = "none"
debug = true

[workspace]
members = ["glfw_sys"]

[dependencies]
egui = "0.32.0"
gl = "0.14.0"
glfw_sys = { path = "glfw_sys" }
tracy-client = { version = "0.18.1", optional = true, features = ["demangle"] }
